--- a/autotask_web_app/templates/base.html
+++ b/autotask_web_app/templates/base.html
@@ -84,89 +84,6 @@
               <!-- END LOGO -->
               <!-- BEGIN RESPONSIVE MENU TOGGLER -->
               <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
-              <!-- END RESPONSIVE MENU TOGGLER -->
-              <!-- BEGIN PAGE ACTIONS -->
-              <!-- DOC: Remove "hide" class to enable the page header actions -->
-              {% if ataccount %}
-                <div class="page-actions">
-                  <span class="caption-subject font-green bold uppercase">Quick Links - {{ ataccount.AccountName }}</span>
-                  <div class="btn-group"  style="margin-left: 25px;">
-                    <a href="{% url 'edit_ataccount' ataccount.id %}" class="btn btn-circle btn-outline green">Edit</a>
-                  </div>
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-circle btn-outline green dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-search"></i>&nbsp;
-                        <span class="hidden-sm hidden-xs">View&nbsp;</span>&nbsp;
-                        <i class="fa fa-angle-down"></i>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                      <li>
-                        <a href="{% url 'ataccount' ataccount.id %}">
-                              <i class="icon-docs"></i> Tickets </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-tag"></i> To Do's </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-share"></i> Account Notes </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-flag"></i> Opportunities
-                          </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-users"></i> Contacts
-                          </a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-circle btn-outline green dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-plus"></i>&nbsp;
-                        <span class="hidden-sm hidden-xs">New&nbsp;</span>&nbsp;
-                        <i class="fa fa-angle-down"></i>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                      <li>
-                          <a href="{% url 'create_ticket' ataccount.id %}">
-                              <i class="icon-docs"></i> Ticket </a>
-                      </li>
-                      <li>
-                          <a href="{% url 'create_home_user_ticket' ataccount.id %}">
-                              <i class="icon-tag"></i> Home User Ticket </a>
-                      </li>
-                      <li>
-                          <a href="{% url 'create_upsell' ataccount.id %}">
-                              <i class="fa fa-gbp"></i> Upsell </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-share"></i> Account Note </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-flag"></i> Opportunity
-                          </a>
-                      </li>
-                      <li class="disabled">
-                          <a href="javascript:;">
-                              <i class="icon-users"></i> Contact
-                          </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                {% else %}
-                <div class="page-actions">
-                  <span class="caption-subject font-green bold uppercase">No Account Selected</span>
-                </div>
-                {% endif %}
-              <!-- END PAGE ACTIONS -->
-              <!-- BEGIN PAGE TOP -->
               <div class="page-top">
                   <!-- BEGIN TOP NAVIGATION MENU -->
                   <div class="top-menu">
@@ -188,18 +105,6 @@
                                   <li>
                                       <a href="{% url 'djstripe:account' %}">
                                           <i class="fa fa-gbp"></i> Payment Settings </a>
-                                  </li>
-                                  <li class="disabled">
-                                      <a href="#">
-                                          <i class="icon-envelope-open"></i> My Inbox
-                                          <span class="badge badge-danger"> 3 </span>
-                                      </a>
-                                  </li>
-                                  <li class="disabled">
-                                      <a href="#">
-                                          <i class="icon-rocket"></i> My Tasks
-                                          <span class="badge badge-success"> 7 </span>
-                                      </a>
                                   </li>
                                   <li class="divider"> </li>
                                   <li>
@@ -237,87 +142,22 @@
                   <!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
                   <!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
                   <ul class="page-sidebar-menu  page-header-fixed" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-                    <li class="nav-item {% if module == 'crm' %} active open{% endif %} ">
+                    <li class="nav-item {% if module == 'validation' %} active open{% endif %} ">
                         <a href="javascript:;" class="nav-link nav-toggle">
                             <i class="fa fa-user fa-2x"></i>
-                            <span class="title">CRM</span>
+                            <span class="title">Validation</span>
                             <span class="arrow"></span>
                             <span class="selected"></span>
                         </a>
                         <ul class="sub-menu">
-                          <li class="nav-item {% if page == 'search-for-account' %} active {% endif %}">
-                              <a href="{% url 'index' %}" class="nav-link ">
-                                  <i class="fa fa-search"></i> <span class="title">Search Account</span>
+                          <li class="nav-item {% if page == 'input-validation' %} active {% endif %}">
+                              <a href="{% url 'input_validation' user.id %}" class="nav-link ">
+                                  <span class="title">Create Validation Groups</span>
                               </a>
                           </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item {% if module == 'customerservices' %} active open{% endif %} ">
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="fa fa-support fa-2x"></i>
-                            <span class="title">Customer Services</span>
-                            <span class="arrow"></span>
-                            <span class="selected"></span>
-                        </a>
-                        <ul class="sub-menu">
-                            <li class="nav-item {% if page == 'booking-in-form' %} active {% endif %}">
-                                <a href="{% url 'booking_in_form' %}" class="nav-link ">
-                                    <i class="fa fa-pencil-square-o"></i> <span class="title">Booking In Form</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item {% if module == 'servicedesk' %} active open{% endif %} ">
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="fa fa-wheelchair fa-2x"></i>
-                            <span class="title">Service Desk</span>
-                            <span class="arrow"></span>
-                            <span class="selected"></span>
-                        </a>
-                        <ul class="sub-menu">
-                          <li class="nav-item {% if page == 'view-tickets' %} active {% endif %}">
-                              <a href="{% url 'index' %}" class="nav-link ">
-                                  <i class="icon-docs"></i> <span class="title">View All Tickets</span>
-                              </a>
-                          </li>
-                          <li class="nav-item {% if page == 'create-ticket' %} active {% endif %}">
-                              <a href="{% url 'index' %}" class="nav-link ">
-                                  <i class="icon-doc"></i> <span class="title">Create Ticket</span>
-                              </a>
-                          </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item {% if module == 'sales' %} active open{% endif %} ">
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="fa fa-line-chart fa-2x"></i>
-                            <span class="title">Sales</span>
-                            <span class="arrow"></span>
-                            <span class="selected"></span>
-                        </a>
-                        <ul class="sub-menu">
-                          <li class="nav-item {% if page == 'create-upsell' %} active {% endif %}">
-                              <a href="{% url 'index' %}" class="nav-link ">
-                                  <i class="fa fa-gbp"></i> <span class="title">Create Upsell</span>
-                              </a>
-                          </li>
-                          <li class="nav-item {% if page == 'products' %} active {% endif %}">
-                              <a href="{% url 'index' %}" class="nav-link ">
-                                  <i class="fa fa-shopping-cart"></i> <span class="title">Product Database</span>
-                              </a>
-                          </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item {% if module == 'billing' %} active open{% endif %} ">
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="fa fa-money fa-2x"></i>
-                            <span class="title">Billing</span>
-                            <span class="arrow"></span>
-                            <span class="selected"></span>
-                        </a>
-                        <ul class="sub-menu">
-                          <li class="nav-item {% if page == 'mysubscription' %} active {% endif %} ">
-                              <a href="{% url 'djstripe:account' %}" class="nav-link ">
-                                    <i class="fa fa-credit-card"></i> <span class="title">My Subscription</span>
+                          <li class="nav-item {% if page == 'profile' %} active {% endif %}">
+                              <a href="{% url 'profile' user.id %}" class="nav-link ">
+                                  <span class="title">Configure Autotask Settings</span>
                               </a>
                           </li>
                         </ul>
