--- a/autotask_web_app/templates/create_ticket.html
+++ b/autotask_web_app/templates/create_ticket.html
@@ -74,13 +74,13 @@ $(document).ready(function () {
             <form method="POST" name="apply_validation_form" action="{% url 'create_ticket' ataccount.id %}">
               {% csrf_token %}
               <input type="hidden" name="apply_validation" value="apply_validation">
-              <h6 class="card-header primary-color white-text">Apply validation rule?</strong></h6>
+              <h6 class="card-header primary-color white-text">Apply validation group?</strong></h6>
               <select class="form-control" name="validation-group-name"  onchange="apply_validation_form.submit();">
                 {% if selected_validation_group %}
                   <option value="{{ selected_validation_group }}">{{ sel_val_group_name }} - Selected</option>
                   <option data-divider="true"></option>
                 {% else %}
-                  <option value="-1">No Validation Group Selected</option>
+                  <option value="">No Validation Group Selected</option>
                 {% endif %}
                 {% for validation_group in validation_groups %}
                     <option value="{{ validation_group.id }}">{{ validation_group.name }}</option>
@@ -99,7 +99,16 @@ $(document).ready(function () {
                   {% csrf_token %}
                   <div class="form-group">
                     <label>Ticket Title</label>
-                        <input type="text" class="form-control" placeholder="Ticket Title" name="title" id="title" {% if title %} value="{{ title }}" {% endif %}></input>
+                    <input type="text" class="form-control" placeholder="Ticket Title" name="title" id="title" {% if title %} value="{{ title }}" {% endif %}></input>
+                    <br>
+                    <label>Ticket Contact</label>
+                    <select class="form-control priority" name="ContactID">
+                      <option value="">Please select...</option>
+                      <option value="">None</option>
+                      {% for contact in contacts %}
+                          <option value="{{ contact.id }}">{{ contact.FirstName }} {{ contact.LastName }}</option>
+                      {% endfor %}
+                    </select>
                   </div>
                   <br>
                   <div class="form-group">
@@ -110,6 +119,8 @@ $(document).ready(function () {
                     <div class="col-md-6">
                       <label>Ticket Status</label>
                       <select class="form-control" name="status" id="status">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for status in statuses %}
                             <option value="{{ status.value }}">{{ status.key }}</option>
                         {% endfor %}
@@ -117,6 +128,8 @@ $(document).ready(function () {
                       <br>
                       <label>Ticket Priority</label>
                       <select class="form-control priority" name="priority" id="priority">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for priority in priorities %}
                             <option value="{{ priority.value }}">{{ priority.key }}</option>
                         {% endfor %}
@@ -134,6 +147,8 @@ $(document).ready(function () {
                     <div class="col-md-6">
                       <label>Ticket Type</label>
                       <select class="form-control" name="TicketType" id="TicketType">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for ticket_type in ticket_types %}
                             <option value="{{ ticket_type.value }}">{{ ticket_type.key }}</option>
                         {% endfor %}
@@ -141,6 +156,8 @@ $(document).ready(function () {
                       <br>
                       <label>Issue Type</label>
                       <select class="form-control" name="IssueType" id="IssueType">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for issue_type in issue_types %}
                             <option value="{{ issue_type.value }}">{{ issue_type.key }}</option>
                         {% endfor %}
@@ -148,6 +165,8 @@ $(document).ready(function () {
                       <br>
                       <label>Sub Issue Type</label>
                       <select class="form-control" name="SubIssueType" id="SubIssueType">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for sub_issue_type in sub_issue_types %}
                             <option value="{{ sub_issue_type.value }}">{{ sub_issue_type.key }}</option>
                         {% endfor %}
@@ -155,6 +174,8 @@ $(document).ready(function () {
                       <br>
                       <label>SLA</label>
                       <select class="form-control" name="ServiceLevelAgreementID" id="ServiceLevelAgreementID">
+                        <option value="">Please select...</option>
+                        <option value="">None</option>
                         {% for sla in slas %}
                             <option value="{{ sla.value }}">{{ sla.key }}</option>
                         {% endfor %}
@@ -168,6 +189,8 @@ $(document).ready(function () {
                   <h6 class="card-header primary-color white-text">ASSIGNMENT</strong></h6>
                   <label>Assign to Queue</label>
                   <select class="form-control" name="queueid" id="queueid">
+                    <option value="">Please select...</option>
+                    <option value="">None</option>
                     {% for queue_id in queue_ids %}
                         <option value="{{ queue_id.value }}">{{ queue_id.key }}</option>
                     {% endfor %}
@@ -175,6 +198,8 @@ $(document).ready(function () {
                   <br>
                   <label>Primary Resource</label>
                   <select class="form-control" name="AssignedResourceID" id="AssignedResourceID">
+                    <option value="">Please select...</option>
+                    <option value="">None</option>
                     {% for resource in resources %}
                         <option value="{{ resource.id }}">{{ resource.FirstName }} {{ resource.LastName }}</option>
                     {% endfor %}
@@ -182,6 +207,8 @@ $(document).ready(function () {
                   <br>
                   <label>Role</label>
                   <select class="form-control" name="queueid" id="queueid">
+                    <option value="">Please select...</option>
+                    <option value="">None</option>
                     {% for role in roles %}
                         <option value="{{ role.id }}">{{ role.Name }}</option>
                     {% endfor %}
@@ -194,7 +221,7 @@ $(document).ready(function () {
                       <label>Contract</label>
                       <select class="form-control" name="ContractID" id="ContractID">
                         {% if not contracts %}
-                          <option value="-1">No contracts for this account</option>
+                          <option value="">No contracts for this account</option>
                         {% else %}
                           {% for contract in contracts %}
                               <option value="{{ contract.id }}">{{ contract.ContractName }}</option>
@@ -205,7 +232,7 @@ $(document).ready(function () {
                       <label>Service/Bundle</label>
                       <select class="form-control" name="test" id="test">
                         {% if not services %}
-                          <option value="-1">No services for this account</option>
+                          <option value="">No services for this account</option>
                           {% for service in services %}
                               <option value="{{ service.id }}">{{ service.InvoiceDescription }}</option>
                           {% endfor %}
@@ -216,8 +243,10 @@ $(document).ready(function () {
                       <label>Work Type</label>
                       <select class="form-control" name="AllocationCodeID" id="AllocationCodeID">
                         {% if not allocation_codes %}
-                          <option value="-1">No services for this account</option>
+                          <option value="">No services for this account</option>
                         {% else %}
+                          <option value="">Please select...</option>
+                          <option value="">None</option>
                           {% for allocation_code in allocation_codes %}
                               <option value="{{ allocation_code.id }}">{{ allocation_code.Name }}</option>
                           {% endfor %}
