--- a/autotask_web_app/templates/input_validation.html
+++ b/autotask_web_app/templates/input_validation.html
@@ -12,14 +12,11 @@
                 <div class="portlet-title tabbable-line">
                     <div class="caption caption-md">
                         <i class="icon-globe theme-font hide"></i>
-                        <span class="caption-subject font-blue-madison bold uppercase">Configure Input Validation</span>
+                        <span class="caption-subject font-blue-madison bold uppercase">Configure Input Validation {% if step == 2 %} - {{ input_validation_dict.ValidationGroup.name }} {% endif %}</span>
                     </div>
                     <ul class="nav nav-tabs">
                         <li class="active">
                             <a href="#tab_2_1" data-toggle="tab">Tickets</a>
-                        </li>
-                        <li>
-                            <a href="#tab_2_2" data-toggle="tab">Opportunities</a>
                         </li>
                     </ul>
                 </div>
