--- a/autotask_web_app/templates/base.html
+++ b/autotask_web_app/templates/base.html
@@ -142,25 +142,26 @@
                   <!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
                   <!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
                   <ul class="page-sidebar-menu  page-header-fixed" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-                    <li class="nav-item {% if module == 'validation' %} active open{% endif %} ">
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="fa fa-user fa-2x"></i>
-                            <span class="title">Validation</span>
-                            <span class="arrow"></span>
-                            <span class="selected"></span>
+                    <li class="nav-item {% if page == 'index' %} active open{% endif %}">
+                      <a href="{% url 'index' %}" class="nav-link nav-toggle">
+                          <i class="icon-home"></i>
+                          <span class="title">Home</span>
+                          {% if page == 'index' %}<span class="selected"></span>{% endif %}
+                      </a>
+                    </li>
+                    <li class="nav-item {% if page == 'validation' %} active open{% endif %} ">
+                        <a href="{% url 'input_validation' user.id %}" class="nav-link nav-toggle">
+                            <i class="fa fa-check-square-o fa-2x"></i>
+                            <span class="title">Validation Groups</span>
+                            {% if page == 'validation' %}<span class="selected"></span>{% endif %}
                         </a>
-                        <ul class="sub-menu">
-                          <li class="nav-item {% if page == 'input-validation' %} active {% endif %}">
-                              <a href="{% url 'input_validation' user.id %}" class="nav-link ">
-                                  <span class="title">Create Validation Groups</span>
-                              </a>
-                          </li>
-                          <li class="nav-item {% if page == 'profile' %} active {% endif %}">
-                              <a href="{% url 'profile' user.id %}" class="nav-link ">
-                                  <span class="title">Configure Autotask Settings</span>
-                              </a>
-                          </li>
-                        </ul>
+                    </li>
+                    <li class="nav-item {% if page == 'profile' %} active open{% endif %} ">
+                        <a href="{% url 'profile' user.id %}" class="nav-link nav-toggle">
+                            <i class="fa fa-user fa-2x"></i>
+                            <span class="title">Your Profile</span>
+                            {% if page == 'profile' %}<span class="selected"></span>{% endif %}
+                        </a>
                     </li>
                   </ul>
                   <!-- END SIDEBAR MENU -->
