--- a/autotask_web_app/templates/djstripe/subscribe.html
+++ b/autotask_web_app/templates/djstripe/subscribe.html
@@ -40,7 +40,7 @@
         <div class="row">
             {% for plan in PLAN_LIST %}
               {% with plan_count=PLAN_LIST|length %}
-                <div class="col-xs-{{ 12|djdiv:plan_count|floatformat }}">
+                <div class="col-xs-3 col-xs-offset-4">
               {% endwith %}
                     {% if customer.current_subscription.plan == plan.plan and customer.current_subscription.status != CurrentSubscription.STATUS_CANCELLED %}
                     <div class="pricing-content-2">
@@ -74,7 +74,7 @@
                                 {% if plan.feature3 %}
                                   <div class="row no-margin">
                                       <div class="col-xs-3 text-right">
-                                          <i class="icon-user"></i>
+                                          <i class="{{ plan.feature3icon }}"></i>
                                       </div>
                                       <div class="col-xs-9 text-left uppercase">{{ plan.feature3 }}</div>
                                   </div>
@@ -82,7 +82,7 @@
                                   {% if plan.feature4 %}
                                     <div class="row no-margin">
                                         <div class="col-xs-3 text-right">
-                                            <i class="icon-user"></i>
+                                            <i class="{{ plan.feature4icon }}"></i>
                                         </div>
                                         <div class="col-xs-9 text-left uppercase">{{ plan.feature4 }}</div>
                                     </div>
@@ -90,7 +90,7 @@
                                     {% if plan.feature5 %}
                                       <div class="row no-margin">
                                           <div class="col-xs-3 text-right">
-                                              <i class="icon-user"></i>
+                                              <i class="{{ plan.feature5icon }}"></i>
                                           </div>
                                           <div class="col-xs-9 text-left uppercase">{{ plan.feature5 }}</div>
                                       </div>
