--- a/autotask_web_app/templates/create_ticket.html
+++ b/autotask_web_app/templates/create_ticket.html
@@ -206,7 +206,7 @@ $(document).ready(function () {
                   <div class="row">
                     <div class="col-md-6">
                       <label>Contract</label>
-                      <select class="form-control" name="ContractID" id="ContractID">
+                      <select class="form-control" name="contractid" id="contractid">
                         {% if not contracts %}
                           <option value="">No contracts for this account</option>
                         {% else %}
