Added delete picklist function on create picklist and started auto generating entities based on subscription level

--- a/autotask_web_app/templates/input_validation.html
+++ b/autotask_web_app/templates/input_validation.html
@@ -60,7 +60,9 @@
                                             {% endfor %}
                                           </select>
                                           <br>
-                                          <input type="submit" style="margin-top: 10px;" />
+                                          <input class="btn green" type="submit" style="margin-top: 10px;" /><br>
+                                          <br>
+                                          <a class="btn green" href="{% url 'generate_entities' user.id %}">Generate Available Entities</a>
                                         </form>
                                     </div>
                                   {% endif %}
